--- a/online-todo-list-persist/pom.xml
+++ b/online-todo-list-persist/pom.xml
@@ -14,6 +14,9 @@
     <packaging>jar</packaging>
     <name>[${project.parent.artifactId}] Persist module</name>
 
+    <properties>
+        <version.h2>1.4.197</version.h2>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -24,7 +27,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.197</version>
+            <version>${version.h2}</version>
             <scope>runtime</scope>
         </dependency>
 
