--- a/online-todo-list-security/pom.xml
+++ b/online-todo-list-security/pom.xml
@@ -14,6 +14,11 @@
     <packaging>jar</packaging>
     <name>[${project.parent.artifactId}] Security module</name>
 
+    <properties>
+        <version.jjwt>0.9.1</version.jjwt>
+        <version.servlet-api>2.5</version.servlet-api>
+    </properties>
+
     <dependencies>
 
         <dependency>
@@ -36,14 +41,14 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <version>${version.jjwt}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <version>${version.servlet-api}</version>
             <scope>provided</scope>
         </dependency>
 
