--- a/online-todo-list-web/package.json
+++ b/online-todo-list-web/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sample-app3",
+  "name": "online-todo-list",
   "version": "1.0.0",
-  "description": "Node.js on Docker",
+  "description": "Online Todo List Node.js",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
